--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -16,10 +16,10 @@ services:
             dockerfile: Dockerfile
         restart: always
         environment:
-            MYSQL_ROOT_PASSWORD: MYSQL_ROOT_PASSWORD
+            MYSQL_ROOT_PASSWORD: "{{ mysql_root_password | password_hash('sha512', password_salt) }}"
             MYSQL_DATABASE: "{{ mysql_db }}"
             MYSQL_USER: "{{ mysql_user }}"
-            MYSQL_PASSWORD: "{{ mysql_password }}"
+            MYSQL_PASSWORD: "{{ mysql_password | password_hash('sha512', password_salt) }}"
         ports:
             - "3000-3005:3306"
     ngnix:
