--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -16,7 +16,7 @@ services:
             dockerfile: Dockerfile
         restart: always
         environment:
-            MYSQL_ROOT_PASSWORD: MYSQL_ROOT_PASSWORD
+            MYSQL_ROOT_PASSWORD: "{{ mysql_root_password }}"
             MYSQL_DATABASE: "{{ mysql_db }}"
             MYSQL_USER: "{{ mysql_user }}"
             MYSQL_PASSWORD: "{{ mysql_password }}"
